--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
     <div id="fullpage">
-        <div class="section section1 active" id="section1">
+        <div class="section active" id="firstPage section1">
             <div class="grid">
                 <div class="Remove_image">
                     <img src="/img/remove5.png" alt="">
@@ -36,7 +36,9 @@
                         <p class="nowrap" style="font-size: 1.5rem">I'm AI-Engineer</p>
                     </div>
                 </div>
-                <div class="item item_2 ">
+
+                <a class="item item_2" href="CV_HaMinhQuan.pdf" download="CV_HaMinhQuan.pdf">
+
                     <div class=" item_content_2_1">
                         <h3>HAPPY MID-AUTUMN</h3>
                         <h3>FESTIVAL</h1>
@@ -72,8 +74,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="item item_3 ">
+                </a>
+
+                <a class="item item_3" href="#section2">
                     <div class=" item_content_3_1">
                         <p class="nowrap">TAKE A LOOK AT</p>
                         <p class="nowrap" style="font-size: 1.rem;color: rgb(255, 84, 4);">MY PROJECT</p>
@@ -83,25 +86,25 @@
                     <div class="item_content_3_2">
                         <p class="nowrap" style="font-size: 1.2rem;">LET'S GO</p>
                     </div>
-                </div>
-                <div class="item item_4 ">
+                </a>
+                <div class="item item_4">
                     <div class="item_content_4">
                         <div class="item_content_4_child">
                             <h5 style="margin-left: 0.8rem;">Contact me here:</h5>
                             <div class="wrapper">
-                                <a href="#" class="icon-container facebook">
+                                <a href="https://www.facebook.com/haminhqquan" class="icon-container facebook">
                                     <i class="icon fab fa-facebook -f"></i>
                                 </a>
-                                <a href="#" class="icon-container linkedin">
+                                <a href="https://www.linkedin.com/in/ha-minh-quan-b10717294/" class="icon-container linkedin">
                                     <i class="icon fab fa-linkedin-in"></i>
                                 </a>
-                                <a href="#" class="icon-container github">
+                                <a href="https://github.com/CatKingio" class="icon-container github">
                                     <i class="icon fab fa-github"></i>
                                 </a>
-                                <a href="#" class="icon-container twitter">
+                                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=haminhquan12c7@gmail.com&su=&body="  target="_blank" class="icon-container mail">
                                     <i class="icon fa-solid fa-envelope"></i>
                                 </a>
-                                <a href="#" class="icon-container youtube">
+                                <a href="https://www.youtube.com/channel/UCJgxZy0y8jfZl768NcxaKZQ" class="icon-container youtube">
                                     <i class="icon fab fa-youtube"></i>
                                 </a>
                             </div>
@@ -123,27 +126,18 @@
             </svg> -->
             </div>
         </div>
-        <div class="section section2" id="section2">
-            <h1>Section 2</h1>
+        <div class="section" id="secondPage section2">
+            <h1>Section 2 : UPDATE LATE</h1>
         </div>
-        <div class="section section3" id="section3">
-            <h1>Section 3</h1>
+        <div class="section" id="3rdPage section3">
+            <h1>Section 3 : UPDATE LATE</h1>
         </div>
-        <div class="section section4" id="section4">
+        <div class="section " id="4thpage section4">
             <div class="slide" id="slide1">
-                <div class="intro">
-                    <h1>Slide 4.1</h1>
-                </div>
+                <h1>Slide 4.1</h1>
             </div>
             <div class="slide" id="slide2">
-                <div class="intro">
-                    <h1>Slide 4.2</h1>
-                    <p>
-                        We are using the class `active` on this section and in this particular horizontal slide. This
-                        way it will appear on the viewport on page load, instead of the 1st section 1st slide.
-                    </p>
-                    <p>You can apply the same logic to horizontal slides</p>
-                </div>
+                <h1>Slide 4.2</h1>
             </div>
             <div class="slide" id="slide3">
                 <h1>Slide 4.3</h1>
@@ -151,10 +145,9 @@
             <div class="slide" id="slide4">
                 <h1>Slide 4.3</h1>
             </div>
-
         </div>
-        <div class="section section5" id="section5">
-
+        <div class="section section5" id="lastPage section5">
+            <h1>Section 5 : UPDATE LATE</h1>
         </div>
     </div>
 
@@ -174,14 +167,10 @@
             scrollingSpeed: 1100,
             credits: { enabled: false },
             fadingEffect: false
-
-
         });
     </script>
 
-    <script>
-
-
+    <script type="text/javascript">
         /*=============== TIME AND DATE TEXT ===============*/
         const dateDayWeek = document.getElementById('date-day-week'),
             dateMonth = document.getElementById('date-month'),
@@ -251,7 +240,7 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-    <script>
+    <script type="text/javascript">
         const list = document.querySelectorAll(".list");
 
         function activeLink() {
@@ -259,7 +248,6 @@
             this.classList.add("active");
         }
         list.forEach((item) => item.addEventListener("click", activeLink));
-
     </script>
 </body>
 
