--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </div>
                 </a>
 
-                <a class="item item_3" href="#section2">
+                <a class="item item_3" href="#secondPage">
                     <div class=" item_content_3_1">
                         <p class="nowrap">TAKE A LOOK AT</p>
                         <p class="nowrap" style="font-size: 1.rem;color: rgb(255, 84, 4);">MY PROJECT</p>
